methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:8: error: ';' expected but 'return' found.
def isFacingTrail():Boolean = {if (testavant()) {avance();}return estSurBiscuit()}
                                                           ^SlugTracking:13: error: Unmatched closing brace '}' ignored here
}
^